fix: add spacing at bottom of page

--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -62,6 +62,7 @@ body {
   position: absolute;
   background-color: rgba(19, 19, 19, 0.85);
   width: 100%;
+  padding-bottom: 200px;
 }
 
 .project-row {
